# polario

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build_docker.sh  pyproject.toml
.github/workflows/: main.yml  pages.yml  publish.yml
plio/: dataset.py
polario/: __init__.py  _version.py  dataset.py  delta_dataset.py  hive_dataset.py  main.py
tests/: test_dataset.py  test_hive_dataset.py  test_init.py
