[tool.poetry]
name = "polario"
version = "0.0.1"
description = "Polars IO"
authors = ["Bram Neijt <bram@neijt.nl>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://bneijt.github.io/polario/"
repository = "https://github.com/bneijt/polario"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.9"
polars = ">=0.16.8"
fsspec = "^2023.1.0"
pyarrow = ">=11.0.0"


[tool.poetry.group.dev.dependencies]
black = { version = "^23.1.0", allow-prereleases = true }
mypy = "^1.0.1"
pytest = "^7.2.1"
pdoc = "^13.0.0"
twine = "^4.0.2"
isort = "^5.12.0"
pre-commit = "^3.1.0"
ruff = "^0.0.259"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
polario = 'polario.main:main'

[tool.isort]
profile = "black"

[tool.mypy]
files = "polario,tests"
ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
extend-ignore = ["E501"]
