[tool.poetry]
name = "polario"
version = "0.0.1"
description = "Polars IO"
authors = ["Bram Neijt <bram@neijt.nl>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://bneijt.github.io/polario/"
repository = "https://github.com/bneijt/polario"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.9"
polars = { extras = ["fsspec"], version = ">=0.16" }
fsspec = "*"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.1.0", allow-prereleases = true }
mypy = "^1.0.1"
pytest = "^7.2.1"
pdoc = "^13.0.0"
twine = "^4.0.2"
isort = "^5.12.0"
pre-commit = "^3.1.0"
ruff = "^0.0.259"
deltalake = "^0.10.0"
s3fs = "^2023.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
polario = 'polario.main:main'

[tool.isort]
profile = "black"

[tool.mypy]
files = "polario,tests"
ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
ignore = ["E501"]
